# omotes-sdk-protocol

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  node_release.yml  python_release.yml
ci/linux/: create_venv.sh  gen_protocol.sh  install_dependencies.sh  update_dependencies.sh
python/: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
python/ci/linux/: build_python_package.sh  create_venv.sh  install_dependencies.sh  update_dependencies.sh
python/src/omotes_sdk_protocol/: job_pb2.py  job_pb2.pyi  work_flow_pb2.py  work_flow_pb2.pyi  workflow_pb2.py  workflow_pb2.pyi
python/src/omotes_sdk_protocol/internal/: task_pb2.py  task_pb2.pyi
src/: job.proto  work_flow.proto  workflow.proto
src/internal/: task.proto
src/omotes_sdk_protocol/: job.proto  workflow.proto
src/omotes_sdk_protocol/internal/: task.proto
typescript/: README.md  package-lock.json  package.json  proto.ts  tsconfig.json  version.ts
typescript/src/: index.js  index.ts  job_pb.d.ts  job_pb.js
